fix scroll x on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,13 +3,19 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  width: 10px;
+  @screen lg {
+    width: 10px;
+  }
 }
 ::-webkit-scrollbar-track {
-  background: theme('colors.grey0');
+  @screen lg {
+    background: theme('colors.grey0');
+  }
 }
 ::-webkit-scrollbar-thumb {
-  background: theme('colors.grey2');
+  @screen lg {
+    background: theme('colors.grey2');
+  }
 }
 .screen {
   min-height: 900px;
